# Yate

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  editor.cpp  editor.hpp  fileEditor.cpp  fileEditor.hpp  main.cpp
cmake/: FindPDCurses.cmake
src/: action.cpp  action.hpp  caret.hpp  editor.cpp  editor.hpp  fileEditor.cpp  fileEditor.hpp  main.cpp  syntaxHighlighter.cpp  syntaxHighlighter.hpp
